<resources>
    <string name="app_name">FINCE</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="presupuesto_text"> %s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--fragment panel general-->
    <string name="menu_fragment_symbol">Simbolo</string>
    <string name="menu_fragment_description">Descr.</string>
    <string name="menu_fragment_percentage_change_daily">Var. %</string>
    <string name="menu_fragment_last_price">Ult. Precio</string>
    <string name="menu_fragment_instrument_type">Tipo</string>

    <!--bottom nav bar panel general-->
    <string name="bottom_nav_bar_stocks">Acciones</string>
    <string name="bottom_nav_bar_cedears">Cedears</string>
    <string name="bottom_nav_bar_bonds">Bonos</string>
    <string name="bottom_nav_bar_corporate_bonds">ON</string>
    <string name="bottom_nav_bar_fci">FCI</string>

    <!--fragment registrar-->
    <string name="frag_reg_titulo">Registro de Usuario</string>
    <string name="frag_reg_nombre">Nombre</string>
    <string name="frag_reg_apellido">Apellido</string>
    <string name="frag_reg_mail">Mail</string>
    <string name="frag_reg_contrasena">Contraseña</string>
    <string name="frag_reg_rep_contrasena">Repetir Contraseña</string>
    <string name="frag_reg_btn_registrarse">Registrarse</string>
    <string name="frag_reg_btn_cancelar">Cancelar</string>

    <!--fragment objetivos-->
    <string name="frag_obj_alta_obj">Alta de objetivo</string>
    <string name="frag_obj_titulo">Nombre</string>
    <string name="frag_obj_monto">Monto de meta</string>
    <string name="frag_obj_fecha">Fecha limite</string>
    <string name="frag_obj_desc">Descripcion</string>
    <string name="frag_obj_btn_confirmar">Crear objetivo</string>


</resources>