<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PanelGeneralFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextText3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/deepBlue"
                    android:clickable="false"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/menu_fragment_symbol"
                    android:textColor="@color/sky"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextText4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/deepBlue"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/menu_fragment_description"
                    android:textColor="@color/sky"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextText5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/deepBlue"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/menu_fragment_percentage_change_daily"
                    android:textColor="@color/sky"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextText6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/deepBlue"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/menu_fragment_last_price"
                    android:textColor="@color/sky"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextText7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/deepBlue"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/menu_fragment_instrument_type"
                    android:textColor="@color/sky"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/panelGeneralRecycleViewBonds"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/isLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>